# standard_ai_workflow

./: .gitignore  AGENTS.md  ANTIGRAVITY.md  GEMINI.md  QUICKSTART.md  README.md  REVIEW_NOTES.md  main.py  mkdocs.yml  opencode.json  pr_body.txt  pyproject.toml  requirements-dev.txt  requirements.txt  split_checklist.md  work_backlog.md
workflow-source/: CHANGELOG.md  MEMORY_GOVERNANCE.md  README.md  pyproject.toml
workflow-source/core/: README.md  audit_log_standard.md  automated_repro_scaffold_skill_spec.md  backlog_update_skill_spec.md  code_index_update_skill_spec.md  doc_sync_skill_spec.md  existing_project_onboarding_contract.md  global_workflow_standard.md  llm_wiki_concept_purpose_spec.md  maturity_matrix.json  mcp_installation_by_harness.md  mcp_v1_migration_spec.md  merge_doc_reconcile_skill_spec.md  orchestrator_contract_v1_wire_guide.md  orchestrator_subagent_contract_v1.md  output_schema_guide.md  phase11_pilot_validation_plan.md  phase5_governance_guide.md  phase6_precision_editing_plan.md  phase9_evolution_plan.md  phase_13_followup.md  project_status_assessment.md  prototype_promotion_scope.md  quality_dashboard_spec.md  question_file_format.md  read_only_mcp_transport_promotion.md  reverse_engineering.md  session_start_skill_spec.md  skill_beta_criteria.md  stable_guarantee.md  stage_gate_pattern.md  stage_gate_runtime_migration.md  strategic_threads.md  v0_8_0_stable_api_spec.md  v0_9_0_deprecation_policy_spec.md  v1_0_0_entry_evaluation.md  validation_plan_skill_spec.md  workflow_adoption_entrypoints.md  workflow_agent_topology.md  workflow_configuration_layers.md  (+9 more)
workflow-source/docs/: output_schema.json
workflow-source/examples/: end_to_end_mcp_demo.md  orchestration_demo.py  orchestrator_feedback_loop_demo.py  pilot_adoption_existing_repo_example.md  pilot_adoption_open_git_client_example.md  pilot_candidate_existing_service_repo_example.md  pilot_candidate_open_git_client_assessment.md  pilot_execution_plan_existing_repo.md  pilot_phase11_devhub_contract_v1.md  pilot_validation_devhub_example.md
workflow-source/extensions/: SCHEMA.md  performance-baseline.md  performance-baseline.opt-in.md  resiliency-baseline.md  resiliency-baseline.opt-in.md  security-baseline.md  security-baseline.opt-in.md  testing-baseline.md  testing-baseline.opt-in.md  v0.7.1-roadmap.md
workflow-source/global-snippets/: README.md
workflow-source/harnesses/: README.md
workflow-source/mcp_servers/: prototype_layout.md
workflow-source/prompts/: code_worker_prompt.md  doc_worker_prompt.md  validation_worker_prompt.md
workflow-source/releases/: Alpha-v0.1.0.md  Alpha-v0.2.0.md  Alpha-v0.3.0.md  Alpha-v0.3.1.md  Beta-Phase-13-v1.0.md  Beta-v0.10.0.md  Beta-v0.10.1.md  Beta-v0.10.2.md  Beta-v0.10.3.md  Beta-v0.10.4.md  Beta-v0.11.0.md  Beta-v0.11.1.md  Beta-v0.11.10.md  Beta-v0.11.11.md  Beta-v0.11.12.md  Beta-v0.11.13.md  Beta-v0.11.14.md  Beta-v0.11.15.md  Beta-v0.11.16.md  Beta-v0.11.17.md  Beta-v0.11.18.md  Beta-v0.11.19.md  Beta-v0.11.2.md  Beta-v0.11.20.md  Beta-v0.11.21.md  Beta-v0.11.22.md  Beta-v0.11.23.md  Beta-v0.11.24.md  Beta-v0.11.25.md  Beta-v0.11.3.md  Beta-v0.11.4.md  Beta-v0.11.5.md  Beta-v0.11.6.md  Beta-v0.11.7.md  Beta-v0.11.8.md  Beta-v0.11.9.md  Beta-v0.13.0.md  Beta-v0.13.1.md  Beta-v0.13.2.md  Beta-v0.13.3.md  (+122 more)
workflow-source/reverse-engineering/: 01-business-overview.md  02-architecture.md  03-code-structure.md  04-api-documentation.md  05-component-inventory.md  06-technology-stack.md  07-dependencies.md  08-code-quality-assessment.md  09-reverse-engineering-metadata.md
workflow-source/schemas/: generated_output_schemas.json  output_sample_contracts.json  read_only_harness_mcp_examples.json  read_only_jsonrpc_fixtures.json  read_only_transport_descriptors.json
workflow-source/scripts/: README.md  apply_harness_update.py  apply_workflow_upgrade.py  bootstrap_workflow_kit.py  export_harness_package.py  generate_output_json_schema.py  generate_output_sample_contracts.py  generate_read_only_harness_mcp_examples.py  generate_read_only_jsonrpc_fixtures.py  generate_read_only_transport_descriptors.py  generate_workflow_state.py  run_demo_workflow.py  run_existing_project_onboarding.py  scaffold_harness.py  setup_gitignore.py
workflow-source/templates/: daily_backlog_template.md  project_status_assessment_template.md  project_workflow_profile_template.md  release_note_template.md  session_handoff_template.md  unit_of_work_template.md  work_backlog_template.md  work_item_plan_template.md
workflow-source/tests/: README.md  check_appendonly_memory_layout.py  check_apply_harness_update.py  check_apply_robust_patch.py  check_atomic_write.py  check_audit_log_compliance.py  check_audit_mkdocs_links.py  check_automated_repro_scaffold_v0_11_24.py  check_backlog_update.py  check_backlog_update_layout.py  check_baselines_compliance.py  check_bidir_link_v0_13_3.py  check_bitbucket_v2.py  check_bootstrap.py  check_bootstrap_interactive_picker.py  check_bootstrap_mcp_roundtrip.py  check_branch_scoped_memory.py  check_cache_analytics.py  check_cache_analytics_alerting.py  check_cache_analytics_alerting_cli.py  check_cache_analytics_diff.py  check_cache_analytics_trend.py  check_cache_analytics_trend_chart.py  check_cache_analytics_trend_chart_cli.py  check_cache_dashboard.py  check_cache_dashboard_cli.py  check_cache_dashboard_export.py  check_cache_dashboard_export_cli.py  check_cache_dashboard_export_html.py  check_cache_lfu_decay.py  check_cache_lfu_decay_full.py  check_cache_lfu_decay_persist.py  check_cache_lfu_decay_persist_csv.py  check_cache_migration.py  check_cache_size_compare.py  check_cache_size_compare_evict.py  check_cli_doctor.py  check_cli_per_strategy.py  check_code_index_update.py  check_code_index_update_apply.py  (+192 more)
workflow-source/tools/: .score_history.jsonl  __init__.py  archive_branch_memory.py  archive_stale_memory.py  check_packaging.py  consumer_metrics.py  emit_wiki_l2_body.py  fill_reverse_engineering_artifacts.py  fix_readme_for_release.py  migrate_active_to_appendonly.py  migrate_legacy_l2.py  migrate_memory_to_branch_scoped.py  (+9 more)
(+1466 files in other folders)
