[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "standard-ai-workflow"
version = "0.15.21"
description = "Standard AI workflow kit — bootstrap, skills, MCP servers, templates, and examples."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "yklee", email = "ddn777@hotmail.com"},
]
keywords = [
    "ai",
    "workflow",
    "mcp",
    "code-agent",
    "harness",
    "standard-ai-workflow",
    "bootstrap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# The full ``workflow-source`` distribution bundles the ``workflow_kit`` core
# library, the ``bootstrap_lib`` package, and all skills/MCP servers/templates.
# Most consumers should install this meta-package and use ``workflow_kit`` as
# the importable library name.
#
# Note: ``workflow_kit`` is shipped as part of this same distribution
# (see ``[tool.setuptools.packages]`` below), so we do NOT declare it as
# an external dependency — that would force pip to fetch it from PyPI,
# which is unnecessary for a local ``pip install -e .`` install.
dependencies = [
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
# MCP server transport. ``stdio-sdk`` uses the official mcp Python SDK
# (experimental). ``jsonrpc-bridge`` is the draft fixture (always available).
mcp-jsonrpc = []
mcp-sdk = [
    "mcp[cli]>=1.0",
]
# v0.7.4+ Property-Based Testing (PBT) — hypothesis framework (optional)
pbt = [
    "hypothesis>=6.0",
]
# v0.7.4+ Memory Profiling — objgraph (reference chain visualization, optional)
profiling = [
    "objgraph>=3.5",
]
# Smoke test runner + linter + formatters.
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/ykylee/standard_ai_workflow"
Repository = "https://github.com/ykylee/standard_ai_workflow"
Issues = "https://github.com/ykylee/standard_ai_workflow/issues"

[tool.setuptools]
# ``workflow-source`` is not a single importable package — it's a bundle of:
#   - ``workflow_kit/`` (importable, lives at workflow-source/workflow_kit/)
#   - ``scripts/bootstrap_lib/`` (importable, lives at workflow-source/scripts/bootstrap_lib/)
#   - skills/, mcp_servers/, templates/, examples/, etc. (non-code assets)
#
# For a full install we only need the two importable sub-packages on
# ``sys.path``. The rest is consumed via the repo's directory layout
# (or copied into the consumer's project by the bootstrap script).
packages = [
    "bootstrap_lib",
    "bootstrap_lib.harnesses",
    "workflow_kit",
    "workflow_kit.common",
    "workflow_kit.common.modes",
    "workflow_kit.common.state",
    "workflow_kit.common.contracts",
    "workflow_kit.common.schemas",
    "workflow_kit.contract_v1",
    "workflow_kit.server",
    "workflow_kit.harness",
]

# Single-file modules that don't live inside a package directory.
# ``bootstrap_workflow_kit`` is the legacy CLI shim kept for back-compat
# (see scripts/bootstrap_workflow_kit.py docstring) and ships as a
# top-level module from ``scripts/``.
py-modules = ["bootstrap_workflow_kit"]

[tool.setuptools.package-dir]
# Map package names to their on-disk locations. This lets us ship
# ``workflow_kit`` and ``bootstrap_lib`` from the same distribution even
# though they live in different subdirectories of the repo.
"workflow_kit" = "workflow_kit"
"workflow_kit.common" = "workflow_kit/common"
"workflow_kit.common.modes" = "workflow_kit/common/modes"
"workflow_kit.common.state" = "workflow_kit/common/state"
"workflow_kit.common.contracts" = "workflow_kit/common/contracts"
"workflow_kit.common.schemas" = "workflow_kit/common/schemas"
"workflow_kit.server" = "workflow_kit/server"
"workflow_kit.harness" = "workflow_kit/harness"
"bootstrap_lib" = "scripts/bootstrap_lib"
"bootstrap_lib.harnesses" = "scripts/bootstrap_lib/harnesses"

[tool.setuptools.package-data]
workflow_kit = ["README.md", "py.typed"]
bootstrap_lib = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["__pycache__/*", "*.pyc", "*.pyo"]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
# v0.8.0+ — strict = true.
# 단계적 격상 (workflow-source/core/v0_8_0_stable_api_spec.md §5.3):
# - v0.8.0: workflow_kit/__init__.py 의 public surface 만 strict clean (이 file 자체).
#   다른 module 은 pyproject.toml [tool.mypy.overrides] 로 module 별 strict 분할.
# - v0.8.x follow-up: workflow_kit/<module>.py 의 strict clean 단계적 격상.
# - v0.9.0: full strict (모든 module strict clean).
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
# v0.9.0+: skills/* 는 non-Python (skill spec markdown + helper script) 디렉터리.
# hyphen-named subpackage (e.g. "git-conflict-resolver") 가 mypy 의 package validation
# 을 trigger 하므로 exclude. workflow_kit / tools / tests 만 mypy strict 대상.
exclude = ["skills/.*", "prompts/.*", "examples/.*", "schemas/.*", "core/.*", "build/.*", "releases/.*", "scripts/.*"]
# v0.8.0+ 단계적 strict 격상 — non-public-surface module 은 v0.8.x~0.9.0 에서 단계적 격상.
# 현재 v0.8.0 은 workflow_kit/__init__.py 의 public API 만 strict clean.
# 다른 module 은 `disallow_untyped_defs = false` (v0.8.x follow-up) 로 두고, base strict = true 가
# *unused-ignore* 등 정합성 lint 만 enforce.
# (overrides 는 v0.8.x follow-up 에서 module 별 추가)
# v0.8.0 follow-up: workflow_kit/{url_validity,okf_import,okf_export,phishing_*,cache_*}.py
# 의 annotation 보강, v0.9.0 에서 full strict.

# ---------------------------------------------------------------------------
# v0.7.6+ workflow-doctor external config
# ---------------------------------------------------------------------------
#
# workflow_kit.common.metadata.load_config() 가 이 section 을 읽어 DoctorConfig 반환.
# v0.8.0+ 단계적 strict 격상 — non-public-surface module 은 v0.8.x~0.9.0 에서 단계적 격상.
# v0.8.0: workflow_kit/__init__.py 만 strict clean (public surface).
# v0.8.1: + workflow_kit/url_validity.py (V-R10, 25 error → 0, v0.8.0 spec §5.3 단계 1).
# v0.8.2+: url_validity.py 다음 module 별 strict 격상, 작은 release 로 분할.
# v0.9.0: full strict (모든 module strict clean).
# module 별 strict 격상 시 [tool.mypy.overrides] 로 enable 하는 것이 아니라,
# v0.8.1 처럼 base strict = true + module 별 error fix.
# 의 partial_rules 인자로 전달. 해당 rule 의 non_compliant 는 hard fail (CI fail).
[tool.workflow-doctor]
# v0.7.6 default: resiliency 의 RES-WF-01/02 (변경 관리 + critical workload 식별).
partial_rules = { resiliency = ["RES-WF-01", "RES-WF-02"] }

# baseline 별 opt-in rule dict. opt-in rule 은 default disable, 명시적 enable 시에만
# evaluate 대상. (v0.7.6 시점: security-auth 의 2FA 는 opt-in 권장, default disable)
opt_in = { "security-auth" = ["SEC-AUTH-04"] }

# dim 별 alert threshold
# - score_alert: 0.0~1.0, score trend 의 dim 별 alert 시 사용 (tools/score_wiki_trend.py)
# - memory_alert_mb: profiling baseline 의 leak/regression alert 시 사용
thresholds = { score_alert = 0.3, memory_alert_mb = 100.0 }

# lint / score 측정 시 skip 할 path glob (build / venv / cache / wiki mirror)
excluded_paths = ["build/*", ".venv/*", ".venv-build/*", "__pycache__/*", ".worktrees/*"]

# CI integration — evaluate_compliance 결과 status 가 이 값 이상이면 exit 1.
# "compliant" | "advisory" | "non_compliant". default: "non_compliant".
fail_on = "non_compliant"
